# MoneroWalletCoreFFI

./: .gitignore  LICENSE  Package.swift  README.md
.github/workflows/: build.yml  release.yml
Artifacts/MoneroWalletCore.xcframework/ios-arm64-simulator/Headers/: module.modulemap  monerowalletcore.h
Artifacts/MoneroWalletCore.xcframework/macos-arm64_x86_64/Headers/: monerowalletcore.h
Artifacts/WalletCore.xcframework/: Info.plist
Artifacts/WalletCore.xcframework/ios-arm64/Headers/: module.modulemap
CLibMoneroWalletCore/: module.modulemap  monerowalletcore.h
CLibWalletCore/: module.modulemap
Scripts/: build_xcframework.sh  install_linux.sh
Sources/MoneroWalletCoreFFI/: MoneroWalletCoreFFI.swift
Utilities/Smoke/: main.swift
monero-oxide-output/: Cargo.toml  build.rs
monero-oxide-output/src/: lib.rs
