[package]
name = "walletcore"
version = "0.1.0"
edition = "2021"

[lib]
name = "monerowalletcore"
crate-type = ["cdylib", "staticlib"]

[dependencies]
monero-wallet = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-wallet", features = ["std"] }
monero-seed = { git = "https://github.com/monero-oxide/monero-wallet-util", package = "monero-seed", features = ["std"] }
monero-address = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-address", features = ["std"] }
monero-ed25519 = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-ed25519", features = ["std"] }
sha3 = { version = "0.10", default-features = false, features = ["std"] }
zeroize = { version = "1.5", default-features = false, features = ["zeroize_derive", "std"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
monero-io = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-io", features = ["std"] }
once_cell = "1.19"
ureq = { version = "2", features = ["tls", "json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
